refactor:参照から値に変更
Refactor Sales domain model to use DepartmentId object.

Replaced `departmentCode` and `departmentStartDate` fields with `DepartmentId` object in the Sales domain model and related classes. Updated test cases, mappers, and services to align with these structural changes for improved data encapsulation and consistency.